# E2_quadripod

./: .Makefile.swp  .lap.c.swp  .testMouv.cpp.swp  .ycm_extra_conf.py  2  7  CMakeLists.txt  E3AFLauch  Makefile  OPENcv  README  README.md  a.out  help  inputSelec.c  inputSelec.h  lauch  lauch-debug  main.c  main.cpp  modelFile.c  ncurcesInterface.c  ncurcesInterface.h  q  struct.c  struct.h  test  test.c  test.h  testMouvzsh
OPENcv/: .cproject  .project
Opencv/: OPENcv.cpp
controller/: .ctrl_Base.c.swp  .ctrl_Sequence.c.swp  ctrl_Base.c  ctrl_Base.h  ctrl_Sequence.c  ctrl_Sequence.h  ctrl_openCv.c  ctrl_openCv.h
data/: .data_Sequence.c.swp  .data_modelFile.c.swp  .data_modelUart.c.swp  .data_struct.c.swp  data_ListMenu.c  data_Sequence.c  data_Sequence.h  data_UartSender.c  data_modelFile.c  data_modelFile.h  data_modelUart.c  data_modelUart.h  data_struct.c  data_struct.h
include/: basic.h  ctrl.c  ctrl.h  global.c  global.h  structForCPP.h
interface/: .ncurses_FileSelect.h.swp  .ncurses_Frame.c.swp  .ncurses_Menu.c.swp  .ncurses_ServoWindow.c.swp  .opencv_jostic.h.swp  ncurses_CmdLine.c  ncurses_CmdLine.h  ncurses_FileSelect.c  ncurses_FileSelect.h  ncurses_Frame.c  ncurses_Frame.h  ncurses_InputString.c  ncurses_InputString.h  ncurses_Interface.c  ncurses_Interface.h  ncurses_ListSequence.c  ncurses_ListSequence.h  ncurses_Match.h  ncurses_Menu.c  ncurses_Menu.h  ncurses_MessageBox.c  ncurses_MessageBox.h  ncurses_ServoWindow.c  ncurses_ServoWindow.h  ncurses_inputNumber.c  ncurses_inputNumber.h  ncurses_inputSelect.c  ncurses_inputSelect.h  opencv_jostic.h  (+2 more)
(+92 files in other folders)
